Fix emoji picker popup z-index

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -6780,7 +6780,7 @@ button.module-image__border-overlay:focus {
     padding: 0;
     margin-bottom: 6px;
     border-radius: 8px;
-    z-index: $z-index-above-base;
+    z-index: $z-index-popup;
     overflow: hidden;
 
     &--scroller {
